# NeoAlzette_ARX_CryptoAnalysis_AutoSearch

./: .gitignore  ALGORITHM1_ANALYSIS_CN.md  ALGORITHM1_IMPLEMENTATION_STATUS_CN.md  ALGORITHM_IMPLEMENTATION_STATUS.md  ALGORITHM_IMPLEMENTATION_VERIFICATION_REPORT.md  ALZETTE_VS_NEOALZETTE.md  APOLOGY_AND_CORRECTION_SUMMARY_CN.md  ARX_OPERATORS_COMPLETE_AUDIT.md  ARX_OPERATORS_COMPLEXITY_REPORT.md  ARX_OPERATORS_FINAL_STATUS.md  ARX_OPERATORS_VERIFICATION.md  AUTO_SEARCH_FRAME_ARCHITECTURE_CN.md  AUTO_SEARCH_FRAME_ARCHITECTURE_EN.md  AUTO_SEARCH_FRAME_BNB_MATHEMATICAL_BLUEPRINT_CN.md  AUTO_SEARCH_FRAME_SUBSPACE_HULL_MATHEMATICAL_BLUEPRINT_CN.md  BOTTOM_UP_VERIFICATION_CN.md  CHECK_REPORT.md  CLAT_ALGORITHM2_DETAILED_VERIFICATION.md  CMakeLists.txt  COMPLEXITY_CORRECTION_REPORT.md  CORRECTED_IMPLEMENTATION_SUMMARY_CN.md  CORRECT_IMPLEMENTATION_PLAN_CN.md  CRITICAL_ERROR_FOUND.md  CRITICAL_FIXES_APPLIED.md  CRITICAL_GAPS_AND_FIXES_CN.md  DIFFERENTIAL_FRAMEWORK_VERIFICATION.md  FINAL_ALGORITHM_COMPLEXITY_CN.md  FINAL_MEDCP_MELCC_STATUS.md  FINAL_STATUS_AFTER_TRANSPOSE_FIX.md  FINAL_STATUS_CN.md  FINAL_SUMMARY_CN.md  FINAL_VERIFICATION_REPORT_CN.md  FRAMEWORK_COMPLETE_VERIFICATION_HONEST_REPORT.md  FRAMEWORK_IMPLEMENTATION_STATUS.md  HONEST_STATUS_REPORT.md  IMPLEMENTATION_COMPLETE_FINAL.md  IMPLEMENTATION_SUMMARY_CN.md  INCONSISTENCIES_WITH_PAPERS.md  INTEGRATION_STATUS.md  LINEAR_FRAMEWORK_VERIFICATION.md  (+48 more)
common/: runtime_component.cpp  runtime_component.hpp
include/: algorithm1_bvweight.hpp  clat_linear.hpp  diff_add_const.hpp  highway_table.hpp  highway_table_lin.hpp  highway_unified.hpp  lb_round.hpp  lb_round_full.hpp  lb_round_lin.hpp  linear_search_algorithm3.hpp  lm_fast.hpp  lm_wallen.hpp  mask_backtranspose.hpp  matsui_complete.hpp  matsui_original.hpp  medcp_analyzer.hpp  melcc_analyzer.hpp  neoalz_lin.hpp  neoalzette_complete.hpp  neoalzette_differential_model.hpp  neoalzette_linear_model.hpp  neoalzette_medcp_analyzer.hpp  neoalzette_melcc_analyzer.hpp  pddt.hpp  pddt_algorithm1_complete.hpp  pddt_optimized.hpp  suffix_lb.hpp  suffix_lb_lin.hpp  threshold_search.hpp  threshold_search_framework.hpp  threshold_search_unified.hpp  utility_tools.hpp  utility_unified.hpp  wallen_fast.hpp  wallen_optimized.hpp  wallen_unified.hpp
include/Common/: canonicalize.hpp  lb_round.hpp  matsui_complete.hpp  neoalzette.hpp  pddt_optimized.hpp  state_optimized.hpp  threshold_search_optimized.hpp  trail_export.hpp
include/MEDCP/: lb_round_full.hpp  lm_fast.hpp
include/MELCC/: highway_table_lin.hpp  mask_backtranspose.hpp  wallen_fast.hpp  wallen_optimized.hpp
include/arx_analysis_operators/: A Bit-Vector Linear Correlation Model for Modular Addition by a Constant (BvCorr‑FLAT).md  DefineSearchWeight.hpp  README.md  SignedInteger128Bit.hpp  UnsignedInteger128Bit.hpp  bitvector_ops.hpp  differential_addconst.hpp  differential_optimal_gamma.hpp  differential_xdp_add.hpp  linear_cor_add.hpp  linear_cor_add.hpp.DEPRECATED  linear_cor_add_logn.hpp  linear_cor_addconst.hpp  linear_correlation_add_logn.hpp  linear_correlation_addconst.hpp  linear_correlation_addconst_flat.hpp  math_util.hpp  modular_addition_ccz.hpp
include/arx_search_framework/: README.md  medcp_analyzer.hpp  melcc_analyzer.hpp  threshold_search_framework.hpp
include/auto_search_frame/: differential_batch_breadth_deep.hpp  differential_hull_batch_export.hpp  differential_hull_callback_aggregator.hpp  hull_growth_common.hpp  linear_batch_breadth_deep.hpp  linear_hull_batch_export.hpp  linear_hull_callback_aggregator.hpp  search_checkpoint.hpp  test_neoalzette_differential_best_search.hpp  test_neoalzette_linear_best_search.hpp
include/auto_subspace_hull/: differential_batch_breadth_deep.hpp  differential_hull_batch_export.hpp  differential_hull_callback_aggregator.hpp  hull_growth_common.hpp  linear_batch_breadth_deep.hpp  linear_hull_batch_export.hpp  linear_hull_callback_aggregator.hpp
include/injection_analysis/: differential_rank.hpp  function_constexpr.hpp  linear_rank.hpp
include/neoalzette/: neoalzette_core.hpp  neoalzette_diff_enumerate_complete.hpp  (+14 more)
papers_txt/: A Bit-Vector Differential Model for the Modular Addition by a Constant and its Applications to Differential and Impossible-Differential Cryptanalysis.txt  A MIQCP-Based Automatic Search Algorithm for Differential-Linear Trails of ARX Ciphers(Long Paper).txt  Alzette A 64-Bit ARX-box (feat CRAX and TRAX) - Hal-Inria.txt  Automatic Search for Differential Trails in ARX Ciphers.txt  Automatic Search for the Best Trails in ARX - Application to Block Cipher Speck.txt  Automatic Search for the Linear (hull) Characteristics of ARX Ciphers - Applied to SPECK, SPARX, Chaskey and CHAM-64.txt  Automatic search of linear trails in ARX with applications to SPECK and Chaskey(978-3-319-39555-5_26).txt  Efficient Algorithms for Computing Differential Properties of Addition (springer 3-540-45473-x_28).txt  Linear Approximations of Addition Modulo 2^n (springer 978-3-540-39887-5_20).txt  MILP-Based Automatic Search Algorithms for Differential and Linear Trails for Speck.txt  sparkle-spec-final.txt
src/: README.md  analyze_medcp.cpp  analyze_medcp_optimized.cpp  analyze_melcc.cpp  analyze_melcc_optimized.cpp  bnb.cpp  complete_matsui_demo.cpp  demo_neoalzette_analysis.cpp  demo_paper_algorithms.cpp  gen_round_lb_table.cpp  highway_table_build.cpp  highway_table_build_lin.cpp  main_diff.cpp  main_lin.cpp  main_pddt.cpp  main_threshold.cpp  matsui_algorithm2_complete.cpp  medcp_analyzer.cpp  milp_diff.cpp  neoalz_lin_search.cpp  neoalzette.cpp  neoalzette_core.cpp  neoalzette_differential_main_search.cpp  neoalzette_differential_model.cpp  neoalzette_linear_main_search.cpp  neoalzette_linear_model.cpp  neoalzette_medcp_analyzer.cpp  neoalzette_melcc_analyzer.cpp  paper_algorithms_demo.cpp  pddt.cpp  pddt_algorithm1_complete.cpp  search_beam_diff.cpp  test_addconst_exact.cpp  test_algorithm1.cpp  test_algorithm2_simple.cpp  test_demo_minimal.cpp  test_linear_correlation_addconst.cpp  test_simple_algorithm.cpp  test_theorem2_correctness.cpp  threshold_lin.cpp  (+2 more)
(+87 files in other folders)
